--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -126,6 +126,7 @@
      <Compile Include="Assets\Scripts\Friction\Views\FrictionHUDView.cs" />
      <Compile Include="Assets\Scripts\Friction\Views\FrictionPlayScreenView.cs" />
      <Compile Include="Assets\Scripts\Friction\Views\FrictionView.cs" />
+     <Compile Include="Assets\Scripts\Momentum and Impulse\Components\MomentumAndImpulseBallCollisionListener.cs" />
      <Compile Include="Assets\Scripts\Momentum and Impulse\Controllers\MomentumAndImpulseController.cs" />
      <Compile Include="Assets\Scripts\Momentum and Impulse\Models\MomentumAndImpulseModel.cs" />
      <Compile Include="Assets\Scripts\Momentum and Impulse\MomentumAndImpulseApplication.cs" />
